infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels: 
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv-loadbalancer
  namespace: default  # Change if using a different namespace
spec:
  type: LoadBalancer
  selector:
    app: auth-mongo  # Ensure this matches your MongoDB pod labels
  ports:
    - name: auth-mongo
      protocol: TCP
      port: 27017  # External access port
      targetPort: 27017  # Port MongoDB is running on inside the pod
