infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels: 
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming
          args: [
            '-p',
            '4222',
            '-m',
            '8222',
            '-hbi',
            '5s',
            '-hbt',
            '5s',
            '-hbf',
            '2',
            '-SD',
            '-cid',
            'ticketing'
          ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv-loadbalancer
  namespace: default  # Change if using a different namespace
spec:
  type: LoadBalancer
  selector:
    app: nats  # Ensure this matches your nats pod labels
  ports:
    - name: client
      protocol: TCP
      port: 4222  # External access port
      targetPort: 4222  # Port nats is running on inside the pod
    - name: monitoring
      protocol: TCP
      port: 8222  # External access port
      targetPort: 8222  # Port nats is running on inside the pod
