infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/limit-except: OPTIONS
spec:
  ingressClassName: nginx
  rules:
    - host: himanshu123abc.com
      http: 
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific  # Required in networking.k8s.io/v1
            backend: 
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/tickets/?(.*)
            pathType: ImplementationSpecific  # Required in networking.k8s.io/v1
            backend: 
              service:
                name: tickets-srv
                port:
                  number: 3000
          - path: /api/orders/?(.*)
            pathType: ImplementationSpecific  # Required in networking.k8s.io/v1
            backend: 
              service:
                name: orders-srv
                port:
                  number: 3000
          - path: /api/payments/?(.*)
            pathType: ImplementationSpecific  # Required in networking.k8s.io/v1
            backend: 
              service:
                name: payments-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific  # Required in networking.k8s.io/v1
            backend: 
              service:
                name: client-srv
                port:
                  number: 3000
